Fix Z-Index Issue for Navbar
Adjusted the z-index of the .Navbar nav class to resolve an issue where the carousel was appearing on top of the sidebar

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3000;
 }
 
 .Navbar ul {
@@ -50,7 +51,7 @@
   right: 0;
   height: 100vh;
   width: 75%;
-  z-index: 2000;
+
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
   box-shadow: rgba(0, 0, 0, 0.3);
