--- a/src/styles/PhotosCarousel.css
+++ b/src/styles/PhotosCarousel.css
@@ -1,7 +1,3 @@
-.PhotosCarousel {
-  position: relative;
-  z-index: 1 !important;
-}
 .PhotosCarousel img {
   height: 45vh;
   object-fit: contain;
